Sun Dec 23 06:17:47 GMT 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (long_options, usage, man_getopt): Add a new
	  -E/--encoding option. It behaves a little like -T, except that it
	  uses nroff instead of troff and outputs to a pager.
	  (make_roff_command): Only call determine_lang_table() if
	  roff_device isn't already set.
	  (display, try_section, display_filesystem, display_database):
	  Check for different_encoding.
	* man/man1/man.man1 (DEFAULTS, OPTIONS): Document -E.

Sun Dec 23 05:23:05 GMT 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Compare sections according to
	  section_list before comparing them lexicographically.
	  (add_candidate): Do a better job of inserting each entry at the
	  right place in the list.

Sun Dec 23 04:47:02 GMT 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (determine_lang_table): Format man pages in UTF-8 if
	  that's the current locale's character set.

Sun Dec 23 02:35:24 GMT 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (popen, pclose): Move to a separate library file ...
	* lib/popen.c: ... here.
	* acinclude.m4 (MAN_FUNC_PCLOSE): Use AC_LIBOBJ to conditionally
	  compile this.
	* acconfig.h: Remove BROKEN_PCLOSE definition.

	Major rewrite of man's searching code to make it maintainable and to
	prepare for better sorting of displayed man pages.

	* src/man.c (add_candidate): New function to add an item to a list
	  of candidate pages.
	  (compare_candidates): New helper function.
	  (compare_names, compare_mandata_ext): Remove.
	  (try_section): Use add_candidate() rather than displaying the page
	  immediately.
	  (try_db): Likewise.
	  (display_filesystem): New function to display pages found by
	  try_section().
	  (try_db_section): Rename to display_database(), and use the
	  candidate structures.
	  (exist_check): Rename to display_database_check(); use candidates.
	  (locate_page): Pass the candidate list through to try_section()
	  and try_db().